inscription : page html + fonctions back-end

--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="{{ base_url }}/public/assets/style/css/header.min.css">
+    <link rel="stylesheet" href="{{asset('style/css/header.min.css')}}">
 </head>
 <header>
 
