--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,12 +5,19 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <title>{% block title %}Welcome in SERRES Informatique!{% endblock %}</title>
-        <meta name="description" content="{% meta_description %}{% endblok %}">
+        <meta name="description" content="{% block meta_description %}{% endblock %}">
         {% block style %}{% endblock %}
+        <!-- bootstrap 5 CDN -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
     </head>
     <body>
-        {% include "_header.html.twig" %}
         {% block body %}{% endblock %}
+        {#scripts#}
+        <!-- bootstrap 5 js -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        <!-- jquery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         {% block js %}{% endblock %}
     </body>
 </html>
