inclusion de notify.js

--- a/templates/authentification/HomePage.html.twig
+++ b/templates/authentification/HomePage.html.twig
@@ -87,4 +87,5 @@
 
 {% block js %}
     <script src="{{ asset('asset/script/HomePage.js') }}"></script>
+    <script src="{{ asset('asset/lib/notify.min.js') }}"></script>
 {% endblock %}
